o [NEXUS-5116] Fix 'Log In' link text alignment

--- a/nexus/nexus-webapp/src/main/webapp/style/Sonatype.css
+++ b/nexus/nexus-webapp/src/main/webapp/style/Sonatype.css
@@ -66,15 +66,15 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #head-link-r {
-  cursor: pointer;
-  text-align: right;
+    cursor: pointer;
+    text-align: right;
+    padding-right: 5px;
 }
 
 .head-link-logged-in {
-    padding-right: 10px;
     background: url("../images/icons/btn-arrow-headlink.gif") no-repeat scroll 88% -30% transparent;
     padding-left: 10px;
-    padding-right: 20px;
+    padding-right: 20px !important;
 }
 
 .profile-menu-visible {
